[package]
name = "amethystboilerplate"
version = "0.1.0"
authors = ["Lightnet"]

[dependencies]
#futures = "0.1"
#amethyst = "0.12.0" #used > [dependencies.amethyst]

#https://book.amethyst.rs/stable/pong-tutorial/pong-tutorial-01.html
[dependencies.amethyst]
version = "0.12.0"
#default-features = false
features = ["vulkan"]

#[[bin]]
#name = "app-server"
#path = "src/main.rs"

#[[bin]]
#name = "app-client"
#path = "src/client.rs"